# SUN-EM-CMOM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/data_structures/: CMakeLists.txt
src/file_io/: CMakeLists.txt
src/helpers/: CMakeLists.txt
src/solvers/: CMakeLists.txt
src/solvers/dgfm/: CMakeLists.txt
src/solvers/dgfm/dgfm_helpers/: CMakeLists.txt
src/solvers/dgfm/parallel_dgfm/: CMakeLists.txt  mpi_dgfm.cpp  mpi_dgfm.h  mpi_idgfm.cpp  mpi_idgfm.h
src/solvers/dgfm/serial_dgfm/: CMakeLists.txt
src/solvers/mom/: CMakeLists.txt
src/solvers/mom/mom_helpers/: CMakeLists.txt
src/solvers/mom/serial_mom/: CMakeLists.txt  fill_ilhs.h  fill_vrhs.cpp
